@@ -5,6 +5,7 @@ Format:
 + new feature
 * bug or behavior fix
 
+
 3.1
 ---
 + Add support for memcaching of service data, to improve performance.
@@ -13,6 +14,8 @@ Format:
 * Fix bug where the notary server would use too many database connections (it now properly closes sessions and connections).
 + Allow notary public/private keys to be read from environment variables.
 	Could be a security trade-off, but makes it easier to run notaries on some distributed systems.
++ Allow notary public/private keys to be exported as heroku config vars.
+	Other systems could be supported as needed.
 
 
 3.0
